create swagger models
