# app/Models/Category.php
@@ -6,6 +6,20 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\HasMany;
 
+/**
+ *
+ * @OA\Schema(
+ * @OA\Xml(name="Category"),
+ * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="name", type="string", description="Category name", example="Coffe"),
+ * @OA\Property(property="image_url", type="string", description="On creation and update, accepts a file, but stores and returns a link to the file on the server", example="storage/category", ),
+ * @OA\Property(property="created_at", type="string", format="date-time", description="Initial creation timestamp", readOnly="true"),
+ * @OA\Property(property="updated_at", type="string", format="date-time", description="Last update timestamp", readOnly="true"),
+ * )
+ *
+ * Class Category
+ *
+ */
 class Category extends Model
 {
     use HasFactory;
